--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ body {
 /* Nav */
 nav {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     padding: 20px 5%;
     position: fixed;
